after first lecture

--- a/slides/00-intro.tex
+++ b/slides/00-intro.tex
@@ -16,7 +16,7 @@
 \begin{frame}[fragile]
   \frametitle{Coordinates}
   \begin{itemize}
-  \item \textbf{Course hours:}  Mo/We 14-16 Uhr, G.-Köhler-Allee 051 - R 03 026
+  \item \textbf{Course hours:}  We 12-
   \item \textbf{Staff:} Prof.\ Dr.\ Peter Thiemann\\
 \begin{alltt}
 Gebäude 079, Raum 00-015
@@ -24,21 +24,57 @@ Telefon: 0761 203 -8051/-8247
 E-mail: thiemann@cs.uni-freiburg.de
 Web: \href{http://www.informatik.uni-freiburg.de/~thiemann}{http://www.informatik.uni-freiburg.de/~thiemann}
 \end{alltt}
-\item  \textbf{Staff:} Gabriel Radanne\\
+\item  \textbf{Staff:} Dr.\ Weili Fu\\
 \begin{alltt}
 Gebäude 079, Raum 00-014
 Telefon: 0761 203 -8053
-E-mail: radanne@cs.uni-freiburg.de
-Web: \href{http://www.informatik.uni-freiburg.de/~radanne}{http://www.informatik.uni-freiburg.de/~radanne}
+E-mail: weilifu@cs.uni-freiburg.de
+Web: \href{http://www.informatik.uni-freiburg.de/~radanne}{http://www.informatik.uni-freiburg.de/~weilifu}
 \end{alltt}
   \item\textbf{Homepage:}\\ \footnotesize
     \href{https://github.com/proglang/FunctionalProgramming}{
       https://github.com/proglang/FunctionalProgramming}
     \\
-    \href{https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2019/}{
-      https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2019/}
+    \href{https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2021/}{
+      https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2021/}
   \end{itemize}
 \end{frame}
+%----------------------------------------------------------------------
+\begin{frame}
+  \frametitle{Administrivia - Lecture}
+  \begin{itemize}
+  \item \~{}90 minutes lecture/week
+    \begin{itemize}
+    \item  lecture videos will be made available on the webpage
+    \item ``topic of the week'' announced every Monday
+    \item either pointer to videos or live lecture
+    \end{itemize}
+  \item question time Tuesdays@12 (shared with other lecture)
+    \begin{itemize}
+    \item \href{https://uni-freiburg.zoom.us/j/82759282295}{Zoom},
+      Meeting ID: 827 5928 2295, Passcode: 1Question
+    \end{itemize}
+  \end{itemize}
+\end{frame}
+
+%----------------------------------------------------------------------
+\begin{frame}
+  \frametitle{Administrivia - Exercise}
+  \begin{itemize}
+  \item \~{}90 minutes exercise/week
+    \begin{itemize}
+    \item TBD, live zoom
+    \end{itemize}
+  \item Exercise questions available on Tuesdays
+    \begin{itemize}
+    \item discussed in next available exercise session
+    \item no need to hand in exercises during the semester
+    \item final exam will be a scheduled homework on Ilias (if numbers
+      permit)
+    \end{itemize}
+  \end{itemize}
+\end{frame}
+
 
 %----------------------------------------------------------------------
 
