preparing for lecture

--- a/slides/00-intro.tex
+++ b/slides/00-intro.tex
@@ -16,7 +16,8 @@
 \begin{frame}[fragile]
   \frametitle{Coordinates}
   \begin{itemize}
-  \item \textbf{Course hours:}  We 12-
+  \item \textbf{Course hours:}  We 14-16
+  \item \textbf{Course room:} SR 101-00-031
   \item \textbf{Staff:} Prof.\ Dr.\ Peter Thiemann\\
 \begin{alltt}
 Gebäude 079, Raum 00-015
@@ -24,56 +25,62 @@ Telefon: 0761 203 -8051/-8247
 E-mail: thiemann@cs.uni-freiburg.de
 Web: \href{http://www.informatik.uni-freiburg.de/~thiemann}{http://www.informatik.uni-freiburg.de/~thiemann}
 \end{alltt}
-\item  \textbf{Staff:} Dr.\ Weili Fu\\
+\item  \textbf{Staff:} Janek Spaderna\\
 \begin{alltt}
-Gebäude 079, Raum 00-014
-Telefon: 0761 203 -8053
-E-mail: weilifu@cs.uni-freiburg.de
-Web: \href{http://www.informatik.uni-freiburg.de/~radanne}{http://www.informatik.uni-freiburg.de/~weilifu}
+E-mail: spadernj@cs.uni-freiburg.de
 \end{alltt}
   \item\textbf{Homepage:}\\ \footnotesize
     \href{https://github.com/proglang/FunctionalProgramming}{
       https://github.com/proglang/FunctionalProgramming}
     \\
-    \href{https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2021/}{
-      https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2021/}
+    \href{https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2022/}{
+      https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2022/}
   \end{itemize}
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}
-  \frametitle{Administrivia - Lecture}
-  \begin{itemize}
-  \item \~{}90 minutes lecture/week
+  \frametitle{Administrivia}
+  \begin{block}{Lecture \~{}90 minutes/week}
     \begin{itemize}
-    \item  lecture videos will be made available on the webpage
-    \item ``topic of the week'' announced every Monday
-    \item either pointer to videos or live lecture
+    \item lecture videos will be made available on the webpage
+    \item presence with live recording (zoom)
     \end{itemize}
-  \item question time Tuesdays@12 (shared with other lecture)
+  \end{block}
+  \begin{block}{Exercise  \~{}90 minutes exercise/week}
     \begin{itemize}
-    \item \href{https://uni-freiburg.zoom.us/j/82759282295}{Zoom},
-      Meeting ID: 827 5928 2295, Passcode: 1Question
-    \end{itemize}
-  \end{itemize}
-\end{frame}
-
-%----------------------------------------------------------------------
-\begin{frame}
-  \frametitle{Administrivia - Exercise}
-  \begin{itemize}
-  \item \~{}90 minutes exercise/week
-    \begin{itemize}
-    \item TBD, live zoom
-    \end{itemize}
-  \item Exercise questions available on Tuesdays
+    \item mode TBD
+    \item Exercise questions available on Wednesdays
     \begin{itemize}
     \item discussed in next available exercise session
     \item no need to hand in exercises during the semester
-    \item final exam will be a scheduled homework on Ilias (if numbers
-      permit)
     \end{itemize}
   \end{itemize}
+\end{block}
+\begin{block}{Final exam}
+  \begin{itemize}
+  \item written exam
+  \item comprising theory questions and small programming tasks
+  \end{itemize}
+\end{block}
 \end{frame}
+
+%----------------------------------------------------------------------
+% \begin{frame}
+%   \frametitle{Administrivia - Exercise}
+%   \begin{itemize}
+%   \item \~{}90 minutes exercise/week
+%     \begin{itemize}
+%     \item mode TBD
+%     \end{itemize}
+%   \item Exercise questions available on Wednesdays
+%     \begin{itemize}
+%     \item discussed in next available exercise session
+%     \item no need to hand in exercises during the semester
+%     \item final exam will be a written exam (comprising theory
+%       questions and small programming tasks)
+%     \end{itemize}
+%   \end{itemize}
+% \end{frame}
 
 
 %----------------------------------------------------------------------
@@ -82,9 +89,9 @@ Web: \href{http://www.informatik.uni-freiburg.de/~radanne}{http://www.informatik
   \frametitle{Contents}
   \begin{itemize}
   \item Basics of functional programming using Haskell
-  \item Haskell development tools
+  \item Theoretical background
   \item Writing Haskell programs
-  \item Using Haskell libraries
+  \item Using Haskell libraries and development tools
   \item Your first Haskell project
   \end{itemize}
 \end{frame}
