--- a/slides/frontmatter.tex
+++ b/slides/frontmatter.tex
@@ -5,5 +5,5 @@
 
 \author[Peter Thiemann]{Prof. Dr. Peter Thiemann}
 \institute[Univ. Freiburg]{Albert-Ludwigs-Universität Freiburg, Germany}
-\date{SS 2021}
+\date{WS 2022/23}
 
