--- a/slides/00-intro.tex
+++ b/slides/00-intro.tex
@@ -17,7 +17,7 @@
   \frametitle{Coordinates}
   \begin{itemize}
   \item \textbf{Course hours:}  We 14-16
-  \item \textbf{Course room:} SR 101-00-031
+  \item \textbf{Course room:} SR 051-00-031
   \item \textbf{Staff:} Prof.\ Dr.\ Peter Thiemann\\
 \begin{alltt}
 Gebäude 079, Raum 00-015
@@ -48,8 +48,8 @@ E-mail: spadernj@cs.uni-freiburg.de
   \end{block}
   \begin{block}{Exercise  \~{}90 minutes exercise/week}
     \begin{itemize}
-    \item mode TBD
-    \item Exercise questions available on Wednesdays
+    \item mostly online
+    \item exercise questions available on Thursdays
     \begin{itemize}
     \item discussed in next available exercise session
     \item no need to hand in exercises during the semester
