--- a/slides/02-haskell-functions.tex
+++ b/slides/02-haskell-functions.tex
@@ -50,27 +50,19 @@ absolute'' x = if x >= 0 then x else -x
   \end{block}
 \end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
   \frametitle{Recursion}
   Standard approach to define functions in functional languages
   (\textbf{no loops!})
-  \begin{itemize}
-  \item
-    Reduce a problem (e.g., \lstinline{power x n}) to a smaller
-    problem of the same kind 
-  \item Eventually reach a base case that can be solved immediately
-  \item Build up solutions from smaller solutions
-  \end{itemize}
-\end{frame}
 
-\begin{frame}[fragile]
-  \frametitle{Example: power}
-  Compute \verb|x^n| without using the built-in operator
+  \begin{block}{Example: power}
+    Compute \lstinline|x^n| without using the built-in operator
 \begin{lstlisting}
 -- compute x to n-th power
 power x 0         = 1
 power x n | n > 0 = x * power x (n - 1)
 \end{lstlisting}
+  \end{block}
 \end{frame}
 
 \begin{frame}
