--- a/slides/04-define-types.tex
+++ b/slides/04-define-types.tex
@@ -19,20 +19,21 @@
 Explaining the meaning of data in comments is bad!
 
 Introduce new, self explaining types.
-\begin{verbatim}
+\begin{lstlisting}
 type Name = String
 type Title = String
 type Year = Int
 type Age = Int
 
 type User = (Name,    Year)
---           ^ name   ^ Year of birth 
+--           name,   year of birth 
 type Film = (Title, Age)
 --                  ^ fsk           
-type Purchase = (Name, Title, Year) -- <---+
---             ^ user name ^ item name     ^ date of purchase
+type Purchase = (Name    -- use name
+                , Title  -- item name
+                , Year)  -- date of purchase
 users :: [User]
-\end{verbatim}
+\end{lstlisting}
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
@@ -57,20 +58,20 @@ users :: [User]
   \end{block}
 \end{frame}
 \begin{frame}
-  \frametitle{The game}
-  \begin{block}<+->{Gameplay}
+  \frametitle{Gameplay}
+  \begin{block}<+->{}
     \begin{itemize}
-    \item Four players (three simulated)
-    \item Trick-taking game
-    \item Each player plays one card to a trick
-    \item Trick won by highest card of the suit led; no Trump!
-    \item Suit must be followed
+    \item four players (three simulated)
+    \item trick-taking game
+    \item each player plays one card to a trick
+    \item trick won by highest card of the suit led; no Trump!
+    \item suit must be followed
     \item Heart cannot lead until
       \begin{itemize}
       \item either Heart has been broken --- a player played Heart
       \item or the leading player has only Heart
       \end{itemize}
-    \item Points are scored by any Hearts (1 point) and the Queen of Spades (13 points) 
+    \item points are scored by any Hearts (1 point) and the Queen of Spades (13 points) 
     \end{itemize}
   \end{block}
   \begin{block}<+->{Objective}
@@ -96,25 +97,27 @@ users :: [User]
   \end{itemize}
 \end{frame}
 \begin{frame}[fragile]
-  \frametitle{Define new data types}
+  \frametitle{Model using algebraic datatypes}
   \begin{block}{A card has a Suit}
-\begin{verbatim}
+\begin{lstlisting}
 data Suit = Spades | Hearts | Diamonds | Clubs
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   \begin{alertblock}{Explanation}
     \begin{itemize}
+    \item define an \emph{algebraic datatype}
     \item new type consisting of (exactly) four values
-    \item  \texttt{Suit}: the name of the new type
-    \item \texttt{Spades}, \texttt{Hearts}, \dots: the names of its
-      \textbf{constructors}.
-    \item Type and constructor names must be capitalized
+    \item \lstinline{Suit}: the name of the new type
+    \item \lstinline{Spades}, \lstinline{Hearts}, \dots: the names of its
+      \textbf{constructors}
+    \item constructors can be used in expressions and patterns
+    \item names of types and constructors must be capitalized
     \end{itemize}
   \end{alertblock}
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
-  \frametitle{Printing new data types}
+  \frametitle{Printing algebraic datatypes}
 \begin{verbatim}
 Main> Spades
 
@@ -134,11 +137,11 @@ Main> Spades
 
 \begin{frame}[fragile,fragile]
   \frametitle{Printing derived}
-\begin{verbatim}
+\begin{lstlisting}
 data Suit = Spades | Hearts | Diamonds | Clubs
   deriving (Show) -- makes `Suit' printable
-\end{verbatim}
-Defines a function \texttt{show} for \texttt{Suit}, which is
+\end{lstlisting}
+Defines a function \lstinline{show} for \lstinline{Suit}, which is
 automatically called by Haskell's printer
 \begin{verbatim}
 Main> Spades
@@ -148,29 +151,35 @@ Main> show Spades
 Main> :t show 
 show :: Show a => a -> String
 \end{verbatim}
+\begin{exampleblock}{Remark}
+  \begin{itemize}
+  \item \lstinline{Show} is a \emph{type class}
+  \item a type class associates one or more functions with a type; in
+    case of \lstinline{Show}, the function is \lstinline{show}
+  \end{itemize}
+\end{exampleblock}
 \end{frame}
 \begin{frame}[fragile,fragile]
   \frametitle{Functions on data types}
    Each suit has a color:
-\begin{verbatim}
+\begin{lstlisting}
  data Color = Black | Red
   deriving (Show)
-\end{verbatim}
+\end{lstlisting}
    Define a color function by pattern matching
-\begin{verbatim}
+\begin{lstlisting}
 color :: Suit -> Color
 color = undefined
-\end{verbatim}
+\end{lstlisting}
 \end{frame}
 \begin{frame}[fragile,fragile]
   \frametitle{More data}
   A card has a suit and a \textbf{rank}:
-\begin{verbatim}
-data Rank = Numeric Integer | Jack | Queen
-          | King | Ace
+\begin{lstlisting}
+data Rank = Numeric Integer | Jack | Queen | King | Ace
   deriving Show
-\end{verbatim}
-The constructor \texttt{Numeric} is different: it takes an argument.
+\end{lstlisting}
+The constructor \lstinline{Numeric} is different: it takes an argument.
 \begin{verbatim}
 Main> :t Numeric
 Numeric :: Integer -> Rank
@@ -186,18 +195,18 @@ Numeric :: Integer -> Rank
     \end{itemize}
   \end{block}
   \begin{block}<+->{Need an ordering of ranks}
-\begin{verbatim}
+\begin{lstlisting}
 -- |rankBeats r1 r2
 -- returns True, if r1 beats r2
 -- i.e. r1 is strictly greater than r2
 rankBeats :: Rank -> Rank -> Bool
 rankBeats r1 r2 = undefined
-\end{verbatim}
+\end{lstlisting}
   \end{block}
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Ordering ranks by pattern matching}
-\begin{verbatim}
+\begin{lstlisting}
 -- rankBeats r1 r2 returns True, if r1 beats r2
 rankBeats :: Rank -> Rank -> Bool
 rankBeats _  Ace    = False
@@ -209,9 +218,8 @@ rankBeats Queen _   = True
 rankBeats _ Jack    = False
 rankBeats Jack _    = True
 rankBeats (Numeric n1) (Numeric n2) = n1 > n2
---          ^^ pattern match on constructor
---             yields its argument
-\end{verbatim}
+-- pattern match on Numeric constructor yields its argument
+\end{lstlisting}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -222,16 +230,21 @@ rankBeats (Numeric n1) (Numeric n2) = n1 > n2
   \item let Haskell generate it for us!
   \end{itemize}
   \begin{block}<+->{Deriving an order}
-    \texttt{<=}, \texttt{<} etc are overloaded and can be extended to
+    The comparison operators \lstinline{<=}, \lstinline{<} etc are overloaded and can be extended to
     new types
-\begin{verbatim}
-data Rank = Numeric Integer | Jack | Queen
-          | King | Ace
+\begin{lstlisting}
+data Rank = Numeric Integer | Jack | Queen | King | Ace
   deriving (Show, Ord)
 
 rankBeats' r1 r2 = r1 > r2
-\end{verbatim}
+\end{lstlisting}
   \end{block}
+  \begin{exampleblock}{Remark}
+    \begin{itemize}
+    \item \lstinline{Ord} is another type class that governs
+      \lstinline{<}, \lstinline{<=}, etc
+    \end{itemize}
+  \end{exampleblock}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -246,10 +259,10 @@ M04Cards.hs:17:27: error:
     • When deriving the instance for (Ord Rank)
 \end{verbatim}
   \begin{block}<2->{Explanation}
-    \texttt{Ord} defines \texttt{<} and then
-\begin{verbatim}
+    Type class \lstinline{Ord} defines \texttt{<} and then
+\begin{lstlisting}
 x <= y = x < y || x == y
-\end{verbatim}
+\end{lstlisting}
     but how do we compare two ranks for equality?
   \end{block}
 \end{frame}
@@ -258,22 +271,20 @@ x <= y = x < y || x == y
   \frametitle{Equality of ranks}
   \begin{itemize}
   \item could be defined by pattern matching, but
-  \item boilerplate code
-  \item let Haskell generate it for us!
+  \item let Haskell generate this boilerplate code for us!
   \end{itemize}
   \begin{block}<+->{Deriving equality}
-    \texttt{==}, \texttt{/=} are overloaded and can be extended to
+    \lstinline{==}, \lstinline{/=} are overloaded and can be extended to
     new types
-\begin{verbatim}
-data Rank = Numeric Integer | Jack | Queen
-          | King | Ace
+\begin{lstlisting}
+data Rank = Numeric Integer | Jack | Queen | King | Ace
   deriving (Show, Eq, Ord)
 
 rankBeats' r1 r2 = r1 > r2
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   \begin{block}<+->{Are they the same?}
-    How do we know that \texttt{rankBeats} $=$ \texttt{rankBeats'}?
+    How do we know that \lstinline{rankBeats} $=$ \lstinline{rankBeats'}?
     Let's defer that.
 
   \end{block}
@@ -281,8 +292,8 @@ rankBeats' r1 r2 = r1 > r2
 
 \begin{frame}[fragile]
   \frametitle{Cards, finally}
-  A card has a \texttt{Suit} and a \texttt{Rank}
-\begin{verbatim}
+  A card has a \lstinline{Suit} and a \lstinline{Rank}
+\begin{lstlisting}
 data Card = Card Rank Suit
   deriving (Show)
 
@@ -291,43 +302,66 @@ rank (Card r s) = r
 
 suit :: Card -> Suit
 suit (Card r s) = s
-\end{verbatim}
+\end{lstlisting}
   \begin{itemize}
-  \item single constructor with two parameters
+  \item \lstinline{Card} has single constructor with two parameters
   \item  (in principle, a tuple with a special name)
-  \item \texttt{rank}, \texttt{suit} are \textbf{selector functions}
+  \item \lstinline{rank}, \lstinline{suit} are \textbf{selector functions}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Alternative definition of Cards}
+  There is a way to define the type along with its selector
+  functions using Haskell's (hated) records types:
+\begin{lstlisting}
+data Card = Card { rank :: Rank, suit :: Suit }
+  deriving (Show)
+\end{lstlisting}
+  \begin{itemize}
+  \item defines type \lstinline{Card} and its constructor
+    \lstinline{Card}
+  \item defines selectors \lstinline{rank :: Card -> Rank} and
+    \lstinline{suit :: Card -> Suit}
+  \item we can use \emph{record notation} to construct values:
+\begin{lstlisting}[numbers=none]
+queenOfSpades = Card{ rank= Queen, suit= Spades }
+\end{lstlisting}
+  \item and \emph{record updates}:
+\begin{lstlisting}[numbers=none]
+queenOfHearts = queenOfSpades { suit= Hearts }
+\end{lstlisting}
   \end{itemize}
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Comparing Cards}
   A card \textbf{beats} another card, if it has the same
   suit, but a higher rank
-\begin{verbatim}
+\begin{lstlisting}
 cardBeats :: Card -> Card -> Bool
 cardBeats givenCard c = suit givenCard == suit c
-                        && rankBeats (rank givenCard)
-                                     (rank c)
-\end{verbatim}
+                        && rankBeats (rank givenCard) (rank c)
+\end{lstlisting}
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Hand of Cards}
-\begin{verbatim}
+\begin{lstlisting}
 type Hand = [Card]
 
 chooseCard :: Card -> Hand -> Card
 chooseCard givenCard h = undefined
-\end{verbatim}
+\end{lstlisting}
   To develop \texttt{chooseCard} refine \texttt{h} by pattern matching
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Choose a card}
-\begin{verbatim}
+\begin{lstlisting}
 type Hand = [Card]
 
 chooseCard :: Card -> Hand -> Card
 chooseCard givenCard [] = undefined -- ???
 chooseCard givenCard (x:xs) = undefined
-\end{verbatim}
+\end{lstlisting}
   \begin{itemize}
   \item What should we do if the hand is empty?
   \item Avoid by defining only non-empty hands!
@@ -335,49 +369,49 @@ chooseCard givenCard (x:xs) = undefined
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Non-empty hands}
-\begin{verbatim}
+\begin{lstlisting}
 data Hand = Last Card | Next Card Hand
   deriving (Show, Eq)
-\end{verbatim}
+\end{lstlisting}
   \begin{itemize}
   \item  Recursive datatype definition
-  \item  \texttt{Last Card} is the \textbf{base case}
+  \item  \lstinline{Last Card} is the \emph{base case}
   \end{itemize}
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Get card from non-empty hand}
   \begin{itemize}
-  \item  A \texttt{Hand} is never empty
+  \item  A \lstinline{Hand} is never empty
   \item  Thus we can always obtain a card
   \end{itemize}
-\begin{verbatim}
+\begin{lstlisting}
 topCard :: Hand -> Card
 topCard (Last c)  = c
 topCard (Next c _) = c
-\end{verbatim}
+\end{lstlisting}
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Choosing from non-empty hand}
-\begin{verbatim}
+\begin{lstlisting}
 -- choose a beating card, if possible
 chooseCard :: Card -> Hand -> Card
 chooseCard = undefined
-\end{verbatim}
+\end{lstlisting}
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Choosing from non-empty hand}
-\begin{verbatim}
+\begin{lstlisting}
 -- choose a beating card, if possible
 chooseCard :: Card -> Hand -> Card
 chooseCard gc (Last c) = c -- may beat, or not
 chooseCard gc (Next c h) | cardBeats gc c = c
                          | otherwise      = chooseCard gc h
-\end{verbatim}
+\end{lstlisting}
 \end{frame}
 %----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Break Time --- Questions?}
+  \frametitle{Questions?}
   \begin{center}
     \tikz{\node[scale=15] at (0,0){?};}
   \end{center}
